# sparrow

./: .gitignore  README.md  dune-project  how-to-build.md  sparrow.opam
doc/: architecture_overview.md  domain_analysis.md  patches_summary.md  semantics_analysis.md
etc/: harmless_lib_clf  harmless_loop_clf
src/: dune
src/core/: frontend.ml  frontend.mli  main.ml  vis.ml
src/domain/: basicDom.ml  itv.ml  octDom.ml  octImpactDom.ml  taintDom.ml  taintDom.mli
src/instance/: itvAnalysis.ml  octAnalysis.ml  octImpactAnalysis.ml  taintAnalysis.ml
src/program/: global.ml  global.mli  interCfg.ml  interCfg.mli  intraCfg.ml  intraCfg.mli
src/report/: alarmExp.ml  alarmExp.mli  report.ml  report.mli
src/semantics/: octImpactSem.ml  octSem.ml  octSem.mli  taintSem.ml  taintSem.mli
src/sparse/: dug.ml  dug.mli
src/strategy/: partialFlowSensitivity.ml  unsoundAlloc.ml  unsoundLib.ml  unsoundLoop.ml
src/util/: inline.ml  profiler.mli
test/: dune  test.ml
