(include_subdirs unqualified)

(library
 (name sparrow_lib)
 (public_name sparrow.lib)
 (wrapped false)
 (libraries 
   batteries findlib findlib.internal findlib.dynload dynlink 
    goblint-cil
    goblint-cil.makecfg
    gmp apron apron.octMPQ ocamlgraph yojson pyml threads str unix num)
 (preprocess (pps ppx_compare ppx_deriving.std))
 (flags :standard -w -7-27-32-33-34-38-39)
 (modules (:standard \ main vis))
 (modules_without_implementation absDom absSem))

(executables
 (names main vis)
 (public_names sparrow sparrow-vis)
 (libraries sparrow_lib findlib findlib.internal findlib.dynload dynlink)
 (flags :standard -w -7-27-32-33-34-38-39)
 (modules main vis))
